@@ -6,6 +6,7 @@ Version 6.5.3 - not yet released
 * user interface
   - eliminate flickering in the cross section on Windows
   - fix wrong radial display in target dialog
+  - start at terrain center when there's no GPS fix and no home location
 * devices
   - FLARM: fix IGC file download on firmware 5.09 (#2619)
 * Android
